@@ -7,11 +7,13 @@ import com.infyniteloop.isec.security.models.Role;
 import com.infyniteloop.isec.security.models.User;
 import com.infyniteloop.isec.security.repository.RoleRepository;
 import com.infyniteloop.isec.security.repository.UserRepository;
+import com.infyniteloop.isec.security.services.TotpService;
 import com.infyniteloop.isec.security.services.UserService;
+import com.infyniteloop.isec.security.util.AuthUtil;
+import com.warrenstrange.googleauth.GoogleAuthenticatorKey;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -26,14 +28,13 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDate;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.*;
 
 //TODO: - `POST /auth/refresh-token` - Refresh JWT token
 //TODO: - `POST /auth/logout` - User logout
+/**
+ * Controller for handling authentication and user registration.
+ */
 @RestController
 @RequestMapping("/api/auth")
 @Tag(name = "Authentication Controller", description = "APIs for user authentication and registration")
@@ -48,16 +49,29 @@ public class AuthController {
     PasswordEncoder encoder;
     UserService userService;
 
+    AuthUtil authUtil;
 
-    public AuthController(JwtUtils jwtUtils, AuthenticationManager authenticationManager, UserRepository userRepository, RoleRepository roleRepository, PasswordEncoder encoder, UserService userService) {
+    TotpService totpService;
+
+    public AuthController(JwtUtils jwtUtils, AuthenticationManager authenticationManager,
+                          UserRepository userRepository, RoleRepository roleRepository, PasswordEncoder encoder,
+                          UserService userService, AuthUtil authUtil, TotpService totpService) {
         this.jwtUtils = jwtUtils;
         this.authenticationManager = authenticationManager;
         this.userRepository = userRepository;
         this.roleRepository = roleRepository;
         this.encoder = encoder;
         this.userService = userService;
+        this.authUtil = authUtil;
+        this.totpService = totpService;
     }
 
+    /**
+     * Authenticate user and return JWT token.
+     *
+     * @param loginRequest The login request containing username and password.
+     * @return ResponseEntity with JWT token and user details or error message.
+     */
     @PostMapping("/public/signin")
     //@CrossOrigin(origins = "http://localhost:3000", allowCredentials = "true")
     @Operation(summary = "User Signin", description = "Authenticate user and return JWT token")
@@ -70,7 +84,7 @@ public class AuthController {
             Map<String, Object> map = new HashMap<>();
             map.put("message", "Bad credentials");
             map.put("status", false);
-            return new ResponseEntity<Object>(map, HttpStatus.NOT_FOUND);
+            return new ResponseEntity<>(map, HttpStatus.NOT_FOUND);
         }
 
         // set the authentication
@@ -84,7 +98,7 @@ public class AuthController {
         // Collect roles from the UserDetails
         List<String> roles = userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
 
         // Prepare the response body, now including the JWT token directly in the body
         LoginResponse response = new LoginResponse(userDetails.getUsername(),
@@ -95,6 +109,12 @@ public class AuthController {
     }
 
 
+    /**
+     * Register a new user.
+     *
+     * @param signUpRequest The signup request containing user details.
+     * @return ResponseEntity with success or error message.
+     */
     @PostMapping("/public/signup")
     @Operation(summary = "User Signup", description = "Register a new user")
     public ResponseEntity<?> registerUser(@Valid @RequestBody SignupRequest signUpRequest) {
@@ -136,13 +156,19 @@ public class AuthController {
             user.setTwoFactorEnabled(false);
             user.setSignUpMethod("email");
         }
-        user.setRole(role);
+        user.getRoles().add(role);
         userRepository.save(user);
 
         return ResponseEntity.ok(new MessageResponse("User registered successfully!"));
     }
 
 
+    /**
+     * Get details of the authenticated user.
+     *
+     * @param userDetails The authenticated user's details.
+     * @return ResponseEntity with user details.
+     */
     @GetMapping("/user")
     @Operation(summary = "Get User Details", description = "Retrieve details of the authenticated user")
     public ResponseEntity<?> getUserDetails(@AuthenticationPrincipal UserDetails userDetails) {
@@ -150,7 +176,7 @@ public class AuthController {
 
         List<String> roles = userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
 
         UserInfoResponse response = new UserInfoResponse(
                 user.getUserId(),
@@ -169,6 +195,12 @@ public class AuthController {
         return ResponseEntity.ok().body(response);
     }
 
+    /**
+     * Get username of the authenticated user.
+     *
+     * @param userDetails The authenticated user's details.
+     * @return ResponseEntity with the username.
+     */
     @GetMapping("/username")
     @Operation(summary = "Get Username", description = "Retrieve the username of the authenticated user")
     public ResponseEntity<?> getUsername(@AuthenticationPrincipal UserDetails userDetails) {
@@ -178,5 +210,102 @@ public class AuthController {
         UserInfoResponse response = UserInfoResponse.builder().username(user.getUserName()).build();
 
         return ResponseEntity.ok().body(response);
+    }
+
+    /**
+     * Endpoint to handle forgot password requests.
+     *
+     * @param email The email address of the user who forgot their password.
+     * @return ResponseEntity with success or error message.
+     */
+    @PostMapping("/public/forgot-password")
+    public ResponseEntity<?> forgotPassword(@RequestParam String email){
+        try{
+            userService.generatePasswordResetToken(email);
+            return ResponseEntity.ok(new MessageResponse("Password reset email sent!"));
+        } catch (Exception e){
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(new MessageResponse("Error sending password reset email"));
+        }
+    }
+
+    /**
+     * Endpoint to handle password reset requests.
+     *
+     * @param token       The password reset token.
+     * @param newPassword The new password to set.
+     * @return ResponseEntity with success or error message.
+     */
+    @PostMapping("/public/reset-password")
+    public ResponseEntity<?> resetPassword(@RequestParam String token,
+                                           @RequestParam String newPassword) {
+
+        try {
+            userService.resetPassword(token, newPassword);
+            return ResponseEntity.ok(new MessageResponse("Password reset successful"));
+        } catch (RuntimeException e) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body(new MessageResponse(e.getMessage()));
+        }
+    }
+
+
+    // 2FA Authentication
+    @PostMapping("/enable-2fa")
+    public ResponseEntity<String> enable2FA() {
+        UUID userId = authUtil.loggedInUserId();
+        GoogleAuthenticatorKey secret = userService.generate2FASecret(userId);
+        String qrCodeUrl = totpService.getQrCodeUrl(secret,
+                userService.getUserById(userId).userName());
+        return ResponseEntity.ok(qrCodeUrl);
+    }
+
+    @PostMapping("/disable-2fa")
+    public ResponseEntity<String> disable2FA() {
+        UUID userId = authUtil.loggedInUserId();
+        userService.disable2FA(userId);
+        return ResponseEntity.ok("2FA disabled");
+    }
+
+
+    @PostMapping("/verify-2fa")
+    public ResponseEntity<String> verify2FA(@RequestParam int code) {
+        UUID userId = authUtil.loggedInUserId();
+        boolean isValid = userService.validate2FACode(userId, code);
+        if (isValid) {
+            userService.enable2FA(userId);
+            return ResponseEntity.ok("2FA Verified");
+        } else {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body("Invalid 2FA Code");
+        }
+    }
+
+
+    @GetMapping("/user/2fa-status")
+    public ResponseEntity<?> get2FAStatus() {
+        User user = authUtil.loggedInUser();
+        if (user != null){
+            return ResponseEntity.ok().body(Map.of("is2faEnabled", user.isTwoFactorEnabled()));
+        } else {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body("User not found");
+        }
+    }
+
+
+    @PostMapping("/public/verify-2fa-login")
+    public ResponseEntity<String> verify2FALogin(@RequestParam int code,
+                                                 @RequestParam String jwtToken) {
+        String username = jwtUtils.getUserNameFromJwtToken(jwtToken);
+        User user = userService.findByUsername(username);
+        boolean isValid = userService.validate2FACode(user.getUserId(), code);
+        if (isValid) {
+            return ResponseEntity.ok("2FA Verified");
+        } else {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body("Invalid 2FA Code");
+        }
     }
 }
